CORE-3596: changed the root log level to WARN so that configuration settings will be logged

--- a/resources/main/log4j.properties
+++ b/resources/main/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=ERROR, A
+log4j.rootLogger=WARN, A
 
 # Set the logging level for clockwork projects.
 log4j.logger.clockwork=INFO, A
